Release Notes:

Version 2.5.5 - 2013062501
- CONTRIB 3525 Added "skip logic"/"conditional branching" feature to Questionnaire.
- Slightly modified method of displaying graph bars on statistics page for compliance
with Bootstrap based themes such as Clean theme, etc.
- Significant changes to the "Manage questions" page ergonomy, including a button for
switching from Required to Not required response.
- Modified/simplified Course reset display, to make it similar to Quiz, Lesson, etc.
- Removed all underscores in variable names, in compliance with Moodle Coding style.
- Plus a number of small fixes here and there.  

Version 2.5.4 Build - 2013062401
- CONTRIB-823 Add confirmation for deleting a question.
- When a question is deleted, if it had already been answered, all responses are deleted too.
- When the last question in a questionnaire is deleted, all that questionnaire's attempts and responses are deleted.
- Changed all confirmation dialogues from Continue/Cancel to Yes/No.
- CONTRIB-4075 Images in Question text are now displayed on the Questions editing page. As well as any other media.

Version 2.5.4 Build - 2013062302
- CONTRIB-4274 Changed Completion conditions from Viewed and Graded to Submitted.
- Implies adding new "completionsubmit" field in "questionnaire" table.

Version 2.5.4 Build - 2013062301
- CONTRIB-926 Course reset now includes questionnaire instances. If graded, grades and feedback comments are deleted too.
- This version also includes major work on making grades work properly for graded questionnaires,
including a new grade.php file.
- When creating a new questionnaire, the list of "Copy existing" questionnaires now displays the questionnaire names
instead of the survey names, which used to be confusing.
- ALL requires now include complete path to dirroot, e.g. require_once($CFG->dirroot.'/mod/questionnaire/...')


Version 2.5.3 Build - 2013062208
CONTRIB-3167 Removed potential SCALES from list of grades to avoid potential problems.